RESOLVED FIXED123812
REGRESSION (r154616): Accelerated drawing is off during the initial load
https://bugs.webkit.org/show_bug.cgi?id=123812
Summary REGRESSION (r154616): Accelerated drawing is off during the initial load
Tim Horton
Reported 2013-11-05 11:20:39 PST
In Safari, if you have "new tabs open with empty page" and "show compositing borders" on, opening a new window will result in white repaint counters on the tiles, indicating that accelerated drawing is not being used for the tiles. Subsequent navigations will do the right thing. This regressed in kling's http://trac.webkit.org/changeset/154616 -- I'm guessing the part in WebPage.cpp where the DrawingArea construction was reordered, but could be something else.
Attachments
Patch (11.25 KB, patch)
2016-03-01 10:20 PST, Andreas Kling
thorton: review+
Patch for landing (11.28 KB, patch)
2016-03-01 12:30 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2016-03-01 10:20:15 PST
Simon Fraser (smfr)
Comment 2 2016-03-01 10:32:46 PST
Comment on attachment 272573 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=272573&action=review > Source/WebCore/ChangeLog:8 > + Robustify the hey-the-Settings-changed callbacks in Page to handle document-less frames. Can you explain here how this is related to the other change?
Andreas Kling
Comment 3 2016-03-01 12:30:32 PST
Created attachment 272586 [details] Patch for landing
WebKit Commit Bot
Comment 4 2016-03-01 13:20:38 PST
Comment on attachment 272586 [details] Patch for landing Clearing flags on attachment: 272586 Committed r197409: <http://trac.webkit.org/changeset/197409>
WebKit Commit Bot
Comment 5 2016-03-01 13:20:42 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 6 2016-03-11 10:57:53 PST
This regressed some stuff http://trac.webkit.org/changeset/197452
Note You need to log in before you can comment on or make changes to this bug.